// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignInFields /> should match snapshot <AddCommentForm /> should match snapshot not disabled 1`] = `
<div
  className="sign-in__fields"
>
  <div
    className="sign-in__field"
  >
    <input
      className="sign-in__input"
      disabled={false}
      id="user-email"
      name="user-email"
      onChange={[Function]}
      placeholder="Email address"
      type="email"
      value=""
    />
    <label
      className="sign-in__label visually-hidden"
      htmlFor="user-email"
    >
      Email address
    </label>
  </div>
  <div
    className="sign-in__field"
  >
    <input
      className="sign-in__input"
      disabled={false}
      id="user-password"
      name="user-password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <label
      className="sign-in__label visually-hidden"
      htmlFor="user-password"
    >
      Password
    </label>
  </div>
</div>
`;

exports[`<SignInFields /> should match snapshot <AddCommentForm /> should match snapshot not disabled 2`] = `
<div
  className="sign-in__fields"
>
  <div
    className="sign-in__field"
  >
    <input
      className="sign-in__input"
      disabled={true}
      id="user-email"
      name="user-email"
      onChange={[Function]}
      placeholder="Email address"
      type="email"
      value=""
    />
    <label
      className="sign-in__label visually-hidden"
      htmlFor="user-email"
    >
      Email address
    </label>
  </div>
  <div
    className="sign-in__field"
  >
    <input
      className="sign-in__input"
      disabled={true}
      id="user-password"
      name="user-password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <label
      className="sign-in__label visually-hidden"
      htmlFor="user-password"
    >
      Password
    </label>
  </div>
</div>
`;
